@@ -211,13 +211,13 @@ function election_statistics_get_post_totals(stdClass $election, $reset = FALSE)
  */
 function _election_statistics_totals_query(stdClass $election) {
   $query = db_select('election_vote', 'ev')
-    ->condition('ev.election_id', $election->election_id)
-    ->condition('ev.valid', 1);
+    ->condition('ev.election_id', $election->election_id);
   $query->join('election_ballot', 'eb', 'ev.ballot_id = eb.ballot_id');
+  $query->condition('eb.value', 1, '>=');
   // Get the total number of ballots, votes, and abstentions.
-  $query->addExpression('COUNT(DISTINCT ev.ballot_id)', 'ballots');
-  $query->addExpression('COUNT(DISTINCT IF(ev.abstain=0, ev.ballot_id, NULL))', 'votes');
-  $query->addExpression('COUNT(DISTINCT IF(ev.abstain=1, ev.ballot_id, NULL))', 'abstentions');
+  $query->addExpression('COUNT(DISTINCT eb.ballot_id)', 'ballots');
+  $query->addExpression('SUM(IF(ev.abstain=0, eb.value, NULL))', 'votes');
+  $query->addExpression('SUM(IF(ev.abstain=1, eb.value, NULL))', 'abstentions');
   $query->addExpression('COUNT(DISTINCT IF(eb.uid = 0, eb.sid_hash, eb.uid))', 'voters');
   $query->addTag('election_statistics_totals');
   return $query;
@@ -240,7 +240,7 @@ function _election_statistics_totals_query(stdClass $election) {
 function election_statistics_get_top_count(stdClass $election, $group_by, $limit = 10) {
   $query = db_select('election_ballot', 'eb')
     ->condition('election_id', $election->election_id)
-    ->condition('valid', 1)
+    ->condition('value', 1, '>=')
     ->fields('eb', array($group_by));
   $query->addExpression('COUNT(DISTINCT IF(uid = 0, sid_hash, uid))', 'voters');
   $query->orderBy('COUNT(DISTINCT IF(uid = 0, sid_hash, uid))', 'DESC');
